2001-01-24  Radek Doulik  <rodo@helixcode.com>

	* htmltext.c (split_word_width): do renew only when words !=
	s->words (not needed, but old way I got segv with efence, weird)

	* htmlengine.c: added need_spell_check flag

	* htmlengine-edit-cut-and-paste.c: do spell checking only on word
	ends and use need_spell_check engine flag

	* htmlcursor.c: check for need_spell_check before cursor move

	* htmlclueflow.c (html_clueflow_spell_check): queue draw checked
	interval
	(queue_draw): helper function

	* testgtkhtml.c (print_footer): add param to quiet warning

2001-01-23  Larry Ewing  <lewing@helixcode.com>

	* htmlcolorset.c: unref all the colors when we destroy the
	colorset (from iain@ximian.com).

	* htmlengine.c: unref the insertion_color. (iain)

	* htmltext.c: free text->face in destroy. (iain)

	* htmltable.c: initialize higher_span.

2001-01-23  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-print.c: use user_data in printing

	* gtkhtml.c (gtk_html_print_with_header_footer): added user_data
	parameter for language bindings

	* htmlengine.c (thaw_idle): use gtk_html_edit_make_cursor_visible

	* gtkhtml.c (gtk_html_edit_make_cursor_visible): new function
	(key_press_event): don't do queue_draw here
	(move_selection): use gtk_html_edit_make_cursor_visible
	(cursor_move): ditto

	* htmlengine.c (html_engine_make_cursor_visible): let cursor
	always rather end in right-bottom

2001-01-19  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit.c (html_engine_indent_pre_paragraph): changed
	undo name

	* htmlclueflow.c (html_clueflow_set_style): clear word width when
	changing from/to PRE

	* htmlengine.c (html_engine_set_painter): use
	html_object_clear_word_width

	* htmlobject.c (html_object_clear_word_width): new function

	* htmlengine-edit.c (html_engine_indent_pre_paragraph): new
	function, indents pre paragraph to 72 chars
	(go_to_begin_of_pre_para): helper function
	(try_break_this_line): ditto
